[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/setup.gd" type="Script" id=1]
[ext_resource path="res://assets/data-latin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/icons8-checkmark.svg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Animation" id=4]
resource_name = "page_2"
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/Page1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/Page1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/Page2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/Page2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "page_3"
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/Page2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/Page2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/Page3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/Page3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Header" type="VBoxContainer" parent="GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 88.0
size_flags_vertical = 0

[node name="WelcomeLabel" type="Label" parent="GUI/Header"]
margin_right = 984.0
margin_bottom = 36.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Welcome to PasswordIO!"
align = 1

[node name="DescriptionLabel" type="Label" parent="GUI/Header"]
margin_top = 40.0
margin_right = 984.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 5 )
text = "Simple, open-source password manager."
align = 1

[node name="Page1" type="CenterContainer" parent="GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Page1"]
margin_left = 209.0
margin_top = 87.0
margin_right = 775.0
margin_bottom = 473.0

[node name="InfoLabel" type="Label" parent="GUI/Page1/VBoxContainer"]
margin_right = 566.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Please read this license note befor continue:"

[node name="LicenseLabel" type="Label" parent="GUI/Page1/VBoxContainer"]
margin_top = 28.0
margin_right = 566.0
margin_bottom = 357.0
custom_styles/normal = SubResource( 3 )
text = "Simple, open-source password manager.
Copyright (C) 2023 Janosch Lion

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>."

[node name="AcceptButton" type="Button" parent="GUI/Page1/VBoxContainer"]
margin_top = 361.0
margin_right = 566.0
margin_bottom = 386.0
text = "I Accept"

[node name="Page2" type="CenterContainer" parent="GUI"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Page2"]
margin_left = 248.0
margin_top = 232.0
margin_right = 736.0
margin_bottom = 328.0

[node name="InfoLabel" type="Label" parent="GUI/Page2/VBoxContainer"]
margin_right = 466.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Great! Now setup your master password:"

[node name="GridContainer" type="GridContainer" parent="GUI/Page2/VBoxContainer"]
margin_top = 28.0
margin_right = 466.0
margin_bottom = 90.0
columns = 3

[node name="PasswordLabel" type="Label" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 146.0
margin_bottom = 24.0
text = "Master Password: "

[node name="PasswordLineEdit" type="LineEdit" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 29.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
secret = true

[node name="Placeholder" type="Control" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_left = 454.0
margin_right = 466.0
margin_bottom = 29.0

[node name="ConfirmPasswordLabel" type="Label" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_top = 38.0
margin_right = 146.0
margin_bottom = 57.0
text = "Confirm Password: "

[node name="ConfirmPasswordLineEdit" type="LineEdit" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 33.0
margin_right = 450.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
secret = true

[node name="SetupButton" type="Button" parent="GUI/Page2/VBoxContainer/GridContainer"]
margin_left = 454.0
margin_top = 33.0
margin_right = 466.0
margin_bottom = 62.0
icon = ExtResource( 3 )

[node name="Page3" type="CenterContainer" parent="GUI"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Page3"]
margin_left = 313.0
margin_top = 253.0
margin_right = 671.0
margin_bottom = 306.0

[node name="InfoLabel" type="Label" parent="GUI/Page3/VBoxContainer"]
margin_right = 358.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Perfect! You are now ready to start!"

[node name="GetStartedButton" type="Button" parent="GUI/Page3/VBoxContainer"]
margin_top = 28.0
margin_right = 358.0
margin_bottom = 53.0
text = "Get Started"

[node name="PasswordDialog" type="AcceptDialog" parent="."]
margin_right = 95.0
margin_bottom = 68.0
dialog_text = "The passwords are not identically!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/page_2 = SubResource( 4 )
anims/page_3 = SubResource( 6 )

[connection signal="pressed" from="GUI/Page1/VBoxContainer/AcceptButton" to="AnimationPlayer" method="play" binds= [ "page_2" ]]
[connection signal="pressed" from="GUI/Page2/VBoxContainer/GridContainer/SetupButton" to="." method="_setup_password"]
[connection signal="pressed" from="GUI/Page3/VBoxContainer/GetStartedButton" to="." method="_get_started"]
